feat: add job-fit functionality.
